# PhantomRF

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  platformio.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
docs/: index.md
docs/algorithms/: 802.11-deauth.md  cc1101-async-serial.md  channel-math.md  nrf24-const-carrier.md
docs/features/: bluetooth-jam.md  spectrum-analyzer.md  subghz-jam.md  wifi-deauth.md
docs/getting-started/: first-flash.md  first-use.md  installation.md  wiring.md
docs/hardware/: cc1101.md  esp32-s3.md  nrf24l01.md  power-budget.md
docs/legal/: disclaimer.md  ethics.md  jurisdictions.md
docs/reference/: api.md  commands.md  pinout.md  settings.md  troubleshooting.md  websocket-protocol.md
flasher/: README.md  index.html
partitions/: default_16mb.csv  default_8mb.csv  minimal.csv
scripts/: post_build.py  pre_build.py
src/: main.cpp
src/core/: Config.h  EventBus.cpp  EventBus.h  Module.h  PhantomRF.cpp  PhantomRF.h  State.h
src/hal/: Board.cpp  Board.h  Buttons.cpp  Buttons.h  Led.cpp  Led.h  Power.cpp  Power.h  Storage.cpp  Storage.h
src/modules/BleAttack/: BleAttack.cpp  BleAttack.h
src/modules/Cc1101Jammer/: Cc1101Jammer.cpp  Cc1101Jammer.h
src/modules/Nrf24Jammer/: Nrf24Jammer.cpp  Nrf24Jammer.h
src/modules/Settings/: Settings.cpp  Settings.h
src/modules/Spectrum/: Spectrum.cpp  Spectrum.h
src/modules/WifiAttack/: WifiAttack.cpp  WifiAttack.h
src/radio/: Cc1101.cpp  Cc1101.h  Nrf24.cpp  Nrf24.h
src/ui/cli/: Console.cpp  Console.h
src/ui/oled/: OledMenu.cpp  OledMenu.h
src/ui/web/: WebServer.cpp  WebServer.h
src/utils/: ChannelMath.cpp  ChannelMath.h  Logger.cpp  Logger.h
test/: native_mock.h
test/test_settings/: main.cpp
tests/: CMakeLists.txt  native_mock.cpp  native_mock.h  test_channel_math.cpp  test_frame_builder.cpp  test_settings.cpp
tests/unit/: CMakeLists.txt
tools/lint/: run-clang-format.sh  run-clang-tidy.sh
web/: index.html  manifest.json
web/css/: style.css
web/js/: app.js  attack.js  files.js  settings.js  spectrum.js  terminal.js
